# RTE_Consumption_forecast

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: Exploration.ipynb  Validation.ipynb
Questions_partie_2/: questions2.md
config/: config.yaml
data/: conso_mix_RTE_2021.csv  conso_mix_RTE_2022.csv  conso_mix_RTE_2023.csv  power.csv
src/: requirements.txt
src/forecast/: train.py
src/forecast.egg-info/: PKG-INFO  SOURCES.txt
src/forecast/utils/: config.py  data_processing.py  features_engineering.py  models.py
