[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast"
version = "0.1.0"
description = "Forecast"
authors = [
    { name = "Tiphaine Le Ludec" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib==1.5.2",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "PyYAML==6.0.3",
    "scikit-learn==1.7.2",
    "xgboost==3.1.2",
    "matplotlib==3.10.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}
